<resources>
    <string name="app_name">Paldeck</string>
    <string name="splashScreen">Paldeck</string>
    <string name="hp">HP</string>
    <string name="defense">Defense</string>
    <string name="crafting_speed">Crafting Speed</string>
    <string name="melee_attack">Melee Attack</string>
    <string name="shot_attack">Shot Attack</string>
    <string name="price">Price</string>
    <string name="stamina">Stamina</string>
    <string name="support">Support</string>
    <string name="running_speed">Running Speed</string>
    <string name="sprinting_speed">Sprinting Speed</string>
    <string name="slow_walk_speed">Slow Walk Speed</string>
    <string name="stats">Stats</string>
    <string name="description">Description</string>
    <string name="pal_name">Pal Name</string>
    <string name="about">About</string>
    <string name="name">Gefila Zona Pranata</string>
    <string name="email">gefilazonapranata@gmail.com</string>
    <string name="kampus">Institut Sains dan Bisnis Atma Luhur</string>
    <string name="share">Share</string>
    <string name="palName">Lambal</string>
    <string name="lorem">lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
</resources>